2005-07-03  Kanru Chen  <koster@debian.org.tw>

	* src/sitepage.cpp,
	src/sitepage.h,
	src/termview.cpp,
	src/site.cpp,
	src/mainframe.cpp,
	src/appconfig.cpp,
	src/termdata.h,
	src/site.h,
	src/telnetview.cpp:
	Add encoding preference.

2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::DrawChar):
	Enable drawing one double-byte character with two different colors.

2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp (CTermView::SetFontFamily):
	Recalculate font size when font family is changed.

2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/widget.cpp (CWidget::Refresh):
	Fix a typo.

2005-07-05  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/font.cpp (CFont::CreateXftFont):
	Fix some problems in font size calculation.

	* src/font.h (CFont::GetMaxWidth()):
	Ensure that max width can be devided by 2.

2005-07-04	Shih-yuan Lee	<fourdollars@gmail.com>

	* src/widget.cpp:
	Some bugs fixed, and using naming rules.

	* Doxygen.in:
	Add more information.

2005-07-04  Jim Huang  <jserv@kaffe.org>

	* src/mainframe.cpp (CMainFrame::set_tray_icon):
	Create new pixbuf according to the allocated width of m_TrayIcon.
	NOTE: PCMan reported a strange behavior of tray icons padding
	under KDE 3.3 .

2005-07-04  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/pcmanx_pure_gtk2.cpp (main):
	Remove redundant CWidget::Init.

	* src/widget.h
	(CWidget::OnIdleCleanup) (CWidget::Init)
	(CWidget::m_WidgetsToBeDeleted): Removed.
	
	* src/widget.cpp
	(CWidget::OnDestroy) (CWidget::OnIdleCleanup): Implementation removed.
	(delete_CWidget): New helper function.
	(CWidget::OnIdleCleanup): Invoke delete_CWidget while idle via
	g_idle_add_full.
	Fix the most serious bug which cause extremely high system load.

2005-07-04  Jim Huang  <jserv@kaffe.org>

	* src/mainframe.h:
	Rename m_Tray_icon to m_TrayIcon_Instance.
	(CMainFrame::set_tray_icon): New helper function splitted from